k8s-files/np-dedicated-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: networkpolicy-ns
  labels:
    topic: network-policy
