k8s-files/np-busybox-w-curl.yaml
apiVersion: v1
kind: Pod
metadata:
  name: np-busybox-w-curl
  namespace: networkpolicy-ns
  labels:
    app: np-busybox-w-curl
spec:
  containers:
    - name: busybox
      image: radial/busyboxplus:curl
      command:
        [
          "sh",
          "-c",
          "while true; do date; curl -m 3 IP_GOES_HERE; sleep 2; done",
        ]
