k8s-files/np-depl-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-depl
  namespace: networkpolicy-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-pod
  template:
    metadata:
      labels:
        app: nginx-pod
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
