k8s-files/np-deny-all-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all-net-policy
  namespace: networkpolicy-ns
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
