k8s-files/np-policy-allow-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-ingress
  namespace: networkpolicy-ns
spec:
  podSelector:
    matchLabels:
      app: nginx-pod
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              project: mb-test
          podSelector:
            matchLabels:
              app: np-busybox-w-curl
      ports:
        - protocol: TCP
          port: 80
